# NeuralForge

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/astra-api/: Cargo.toml
crates/astra-api/src/: lib.rs
crates/astra-cli/: Cargo.toml
crates/astra-cli/src/: cli.rs  cmd.rs  lib.rs  main.rs  term.rs
crates/astra-core/: Cargo.toml
crates/astra-core/src/: dtype.rs  error.rs  lib.rs  shape.rs  tensor.rs  types.rs
crates/astra-formats/: Cargo.toml
crates/astra-formats/src/: gguf.rs  lib.rs  safetensors.rs
crates/astra-hardware/: Cargo.toml
crates/astra-hardware/src/: lib.rs
crates/astra-kernels/: Cargo.toml
crates/astra-kernels/src/: attention.rs  lib.rs  matmul.rs  norm.rs  op.rs
crates/astra-models/: Cargo.toml
crates/astra-models/src/: lib.rs
crates/astra-planner/: Cargo.toml
crates/astra-planner/src/: lib.rs
crates/astra-qwen/: Cargo.toml
crates/astra-qwen/src/: config.rs  lib.rs  model.rs
crates/astra-runtime/: Cargo.toml
crates/astra-runtime/src/: lib.rs
crates/astra-tokenizers/: Cargo.toml
crates/astra-tokenizers/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  MODELS.md
