[workspace]
resolver = "2"
members = [
    "crates/astra-core",
    "crates/astra-cli",
    "crates/astra-formats",
    "crates/astra-hardware",
    "crates/astra-planner",
    "crates/astra-kernels",
    "crates/astra-tokenizers",
    "crates/astra-qwen",
    "crates/astra-runtime",
    "crates/astra-models",
    "crates/astra-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/H04X4/NeuralForge"
description = "NeuralForge — forge intelligence: universal local AI runtime for Qwen3 models"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "color"] }
colored = "3"
indicatif = "0.17"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
snap = "1"
regex = "1"
