[package]
name = "astra-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge astra-api crate"


[dependencies]
astra-core = { path = "../astra-core" }
astra-formats = { path = "../astra-formats" }
astra-runtime = { path = "../astra-runtime" }
astra-qwen = { path = "../astra-qwen" }
astra-tokenizers = { path = "../astra-tokenizers" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
