[package]
name = "astra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge CLI — universal local AI runtime command-line interface"

[[bin]]
name = "neural-forge"
path = "src/main.rs"

[dependencies]
astra-core = { path = "../astra-core" }
astra-formats = { path = "../astra-formats" }
astra-hardware = { path = "../astra-hardware" }
astra-planner = { path = "../astra-planner" }
astra-tokenizers = { path = "../astra-tokenizers" }
astra-kernels = { path = "../astra-kernels" }
astra-qwen = { path = "../astra-qwen" }
astra-runtime = { path = "../astra-runtime" }
astra-models = { path = "../astra-models" }
astra-api = { path = "../astra-api" }

clap.workspace = true
colored.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
