[package]
name = "astra-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge astra-formats crate"


[dependencies]
astra-core = { path = "../astra-core" }
bytemuck = "1"
half = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
