[package]
name = "astra-hardware"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge astra-hardware crate"


[dependencies]
astra-core = { path = "../astra-core" }
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
