[package]
name = "astra-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge astra-models crate"


[dependencies]
astra-core = { path = "../astra-core" }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
