[package]
name = "astra-tokenizers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuralForge astra-tokenizers crate"


[dependencies]
astra-core = { path = "../astra-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
